<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#111111"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/home_ic_good_small"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/coin_level_good"
            android:textColor="#F7F7F7"
            android:textSize="16sp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_good"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_coin_level_top" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/home_ic_rising_small"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/coin_level_fast"
            android:textColor="#F7F7F7"
            android:textSize="16sp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_rising"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_coin_level_top" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/home_ic_bad_small"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/coin_level_bad"
            android:textColor="#F7F7F7"
            android:textSize="16sp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_bad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_coin_level_top" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            tools:ignore="RtlHardcoded,RtlSymmetry">

            <View
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="2.5dp"
                android:layout_marginTop="3dp"
                android:background="#578DDF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/coin_level_investment_rating"
                android:textColor="#F7F7F7"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_coin_level_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1C1C1C"
        android:orientation="horizontal"
        android:paddingBottom="15dp"
        android:paddingTop="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/coin_level_name"
            android:textColor="#F7F7F7"
            android:textSize="15sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/coin_level_quote_change"
            android:textColor="#F7F7F7"
            android:textSize="15sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/coin_level_status"
            android:textColor="#F7F7F7"
            android:textSize="15sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/coin_level_investment_score"
            android:textColor="#F7F7F7"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>