<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C1C1C"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#1C1C1C"
        android:gravity="center"
        android:text="@string/coin_level_coin_level"
        android:textColor="#F7F7F7"
        android:textSize="16sp" />

    <cn.biiduu.biiduu.widget.MPtrFrameLayout
        android:id="@+id/pfl_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <cn.biiduu.biiduu.widget.BetterRecyclerView
                android:id="@+id/rv_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF" />

            <LinearLayout
                android:id="@+id/ll_coin_level_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#1C1C1C"
                android:orientation="horizontal"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:visibility="invisible"
                tools:visibility="visible">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/coin_level_name"
                    android:textColor="#F7F7F7"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/coin_level_quote_change"
                    android:textColor="#F7F7F7"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/coin_level_status"
                    android:textColor="#F7F7F7"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/coin_level_score"
                    android:textColor="#F7F7F7"
                    android:textSize="15sp" />
            </LinearLayout>
        </FrameLayout>
    </cn.biiduu.biiduu.widget.MPtrFrameLayout>
</LinearLayout>