<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#1C1C1C"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_line_zhishu"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:text="@string/coin_index_index_trend"
                android:textColor="#FFF7F7F7"
                android:textSize="12sp"
                tools:ignore="RtlHardcoded" />

            <RadioGroup
                android:id="@+id/rg_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal"
                tools:ignore="RtlHardcoded">

                <RadioButton
                    android:id="@+id/rb_fenshi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#111111"
                    android:button="@null"
                    android:checked="true"
                    android:paddingBottom="3dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="3dp"
                    android:text="@string/coin_index_minute_hour"
                    android:textColor="@drawable/selector_trend_text"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/rb_rixian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:background="#111111"
                    android:button="@null"
                    android:paddingBottom="3dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="3dp"
                    android:text="@string/coin_index_day_line"
                    android:textColor="@drawable/selector_trend_text"
                    android:textSize="12sp"
                    tools:ignore="RtlHardcoded" />
            </RadioGroup>
        </LinearLayout>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lc_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#111111"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="15dp">

        <View
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="2.5dp"
            android:layout_marginTop="3dp"
            android:background="#578DDF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/coin_index_sample"
            android:textColor="#F7F7F7"
            android:textSize="16sp"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:background="#333333"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/coin_index_coin_type"
            android:textColor="#F7F7F7"
            android:textSize="15sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <cn.biiduu.biiduu.widget.ObservableScrollView
                android:id="@+id/osv_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:background="#1C1C1C"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/coin_index_price"
                        android:textColor="#F7F7F7"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:background="#1C1C1C"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/coin_index_volume"
                        android:textColor="#F7F7F7"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:background="#1C1C1C"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/coin_index_quote_change"
                        android:textColor="#F7F7F7"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="110dp"
                        android:layout_height="match_parent"
                        android:background="#1C1C1C"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/coin_index_price_trend"
                        android:textColor="#F7F7F7" />
                </LinearLayout>
            </cn.biiduu.biiduu.widget.ObservableScrollView>

            <ImageView
                android:id="@+id/iv_arrow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:background="@drawable/shape_black"
                android:contentDescription="@null"
                android:paddingLeft="30dp"
                android:paddingRight="5dp"
                android:scaleType="center"
                android:src="@drawable/bizhi_arrow"
                tools:ignore="RtlHardcoded,RtlSymmetry" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>